--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.15.0",
+    "eslint-config-react-app": "^7.0.1",
     "mini-css-extract-plugin": "2.4.5"
   }
 }
